Improves logic to handle strings and list as data in TargetEntity